--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Tue May 21 21:41:41 PDT 2013
-app.grails.version=2.2.2
+#Thu Jan 16 18:59:48 PST 2014
+app.grails.version=2.2.4
 app.name=fauxgame
 app.version=0.1
