--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Thu Jan 16 18:59:48 PST 2014
+#Thu Mar 20 10:47:23 PDT 2014
 app.grails.version=2.3.7
 app.name=fauxgame
+app.servlet.version=2.5
 app.version=0.1
